# UnlimitedGPT

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
UnlimitedGPT/: UnlimitedGPT.py  __init__.py
UnlimitedGPT/internal/: driver.py  objects.py  selectors.py
docs/: README.md
docs/assets/: preview.txt
src/: setup.py
src/UnlimitedGPT/: ChatGPT.py  UnlimitedGPT.py  __init__.py
src/UnlimitedGPT/internal/: chatgpt_data.py  driver.py  exceptions.py  objects.py
tests/UnlimitedGPT/: example.env  test_UnlimitedGPT.py
